-*-outline-*-

* version 0.72
** ozmake --config=... now permits to manage predefined defaults
   defaults can always be explicitly overriden on the command line
   ozmake --config=set --FEAT1=VAL1 --FEAT2=VAL2 ...
     saves the given defaults for those features (ignoring features
     for which defaults cannot be set)
   ozmake --config=unset FEAT1 FEAT2 ...
     removes defaults for these features
   ozmake --config=list
     lists the current defaults
** option --exe controls the name and platform of installed executables
   the convention on Windows is that executables have an .exe extension
   while on Unix there is normally no extension.
   --exe=default only installs executables using the platform's convention
   --exe=yes only installs executables with .exe extension
   --exe=no only installs executables without extension
   --exe=both installs both
   --exe=multi installs both, but the .exe one is linked for Windows
   while the no extension one is linked for Unix
** additional features supported in makefile.oz
   requires : [ ... ] for dependencies on other packages
   topics   : [ ... ] for MOGUL classification
   version  : ... a version number e.g. "2" or "3.2.7"

* version 0.71
** ozmake --extract: default directory changed from current directory
   to subdirectory with name derived from the package mogul id
** makefiles are now textually included in packages
   the preprocessed makefile is now called MAKEPKG.oz and is
   only used when installing from a package file when not explitly
   disabled by the user with --nousemakepkg

* version 0.7n
** start recording changes between versions
** OZLOAD properly passed to sub ozc processes
** fixed date handling: unfortunately, this is an incompatible change
   all recorded package dates prior to this fix, where incorrect

* previous history not recorded