@@ -12,14 +12,15 @@ define
          DIR = {self get_tmpnam($)}
       in
          try
-            {self exec_mkdir(DIR)}
             {self set_srcdir(DIR)}
             {self set_builddir(DIR)}
             {self set_extractdir(DIR)}
-            {self extract(writeMakefile:false)}
-            {self install_all}
+            if {self extract(writeMakefile:false extracted:$)} then
+               {self exec_mkdir(DIR)}
+               {self install_all}
+            end
          finally
-            {self exec_rmdir(DIR)}
+            if {Path.exists DIR} then {self exec_rmdir(DIR)} end
          end
       end
 
@@ -142,11 +143,28 @@ define
       meth install_all
          %% need to read the makefile before computing install targets
          {self makefile_read}
-         {self build_all}
-         ITriples = {self get_installation_triples($)}
-         %%!!! Targets = {self get_install_targets($)}
-      in
-         Installer,install_itriples(ITriples)
+         if {self database_check_grade($)} then
+            {self xtrace('No need to freshen: skipping installation')}
+         else
+            {self build_all}
+            ITriples = {self get_installation_triples($)}
+            %%!!! Targets = {self get_install_targets($)}
+         in
+            Installer,install_itriples(ITriples)
+         end
+      end
+
+      meth checkneeded($)
+         {self extract(writeFiles:false)}
+         {self makefile_read}
+         {self database_read}
+         if {self database_check_grade($)} then
+            {self trace('install needed: yes')}
+            0
+         else
+            {self trace('install needed: no')}
+            1
+         end
       end
 
       meth install_itriples(ITriples) %installation triples
@@ -154,100 +172,103 @@ define
          {self makefile_read}
          %% --grade=GRADE
          {self database_read}
-         {self database_check_grade}
-         %%!!! %% make sure all targets have been built
-         %%!!! for T in Targets do {self build_target(T)} end
-         %% compute the files that will be written
-         %%!!! IPairs    = Installer,targets_to_installation_pairs(Targets $)
-         MOG       = {self get_mogul($)}
-         PKG       = {self database_mutable_entry(MOG $)}
-         LostStack = {Utils.newStack} LostFiles
-         IFiles    = {Map ITriples fun {$ _#F#_} F end}
-      in
-         %% compute the files that will be overwritten and
-         %% belong to other packages
-         for _#F#_ in ITriples do
-            FMog = {self file_to_package(F $)}
+         if {self database_check_grade($)} then
+            {self trace('No need to freshen: skipping installation')}
+         else
+            %%!!! %% make sure all targets have been built
+            %%!!! for T in Targets do {self build_target(T)} end
+            %% compute the files that will be written
+            %%!!! IPairs    = Installer,targets_to_installation_pairs(Targets $)
+            MOG       = {self get_mogul($)}
+            PKG       = {self database_mutable_entry(MOG $)}
+            LostStack = {Utils.newStack} LostFiles
+            IFiles    = {Map ITriples fun {$ _#F#_} F end}
          in
-            if FMog\=unit andthen FMog\=MOG then {LostStack.push F} end
-         end
-         LostFiles={LostStack.toList}
-         %% complain about overwriting unless --replacefiles
-         if LostFiles\=nil andthen {Not {self get_replacefiles($)}} then
-            raise ozmake(install:overwriting(LostFiles)) end
-         end
-         %% actually install the targets
-         {self trace('installing targets')}
-         {self incr}
-         try
-            for From#To#Action in ITriples do
-               case Action
-               of file        then {self exec_install_file(From To)}
-               [] exec        then {self exec_install_exec(From To)}
-               [] execUnix    then {self exec_install_execUnix(From To)}
-               [] execWindows then {self exec_install_execWindows(From To)}
+            %% compute the files that will be overwritten and
+            %% belong to other packages
+            for _#F#_ in ITriples do
+               FMog = {self file_to_package(F $)}
+            in
+               if FMog\=unit andthen FMog\=MOG then {LostStack.push F} end
+            end
+            LostFiles={LostStack.toList}
+            %% complain about overwriting unless --replacefiles
+            if LostFiles\=nil andthen {Not {self get_replacefiles($)}} then
+               raise ozmake(install:overwriting(LostFiles)) end
+            end
+            %% actually install the targets
+            {self trace('installing targets')}
+            {self incr}
+            try
+               for From#To#Action in ITriples do
+                  case Action
+                  of file        then {self exec_install_file(From To)}
+                  [] exec        then {self exec_install_exec(From To)}
+                  [] execUnix    then {self exec_install_execUnix(From To)}
+                  [] execWindows then {self exec_install_execWindows(From To)}
+                  end
+               end
+            finally {self decr} end
+            %% update database
+            %% move each lost file to its package lost list
+            for F in LostFiles do
+               Mog = {self file_to_package(F $)}
+               Pkg = {self database_mutable_entry(Mog $)}
+            in
+               Pkg.files := {Utils.diff  {CondSelect Pkg files nil} [F]}
+               Pkg.lost  := {Utils.union {CondSelect Pkg lost  nil} [F]}
+            end
+            %% take care of the previous installation
+            if {self get_extendpackage($)} then
+               %% if we are extending the package
+               %% add the files that were installed
+               PKG.files   := {Utils.union {CondSelect PKG files   nil} IFiles}
+               PKG.zombies := {Utils.diff  {CondSelect PKG zombies nil} IFiles}
+            else
+               %% else compute the left overs from the previous installation
+               %% i.e. every file in this package which is not being overwritten
+               LeftFiles = {Utils.diff {CondSelect PKG files nil} IFiles}
+            in
+               if {self get_keepzombies($)} then
+                  %% move them to the zombie list
+                  PKG.zombies := {Utils.union LeftFiles {CondSelect PKG zombies nil}}
+                  PKG.lost    := {Utils.diff {CondSelect PKG lost nil} IFiles}
+                  PKG.files   := IFiles
+               else
+                  PKG.files := IFiles
+                  %% forget that anything was ever lost
+                  PKG.lost  := nil
+                  %% remove all zombies and left overs
+                  {self trace('removing zombies')}
+                  {self incr}
+                  try
+                     for F in {CondSelect PKG zombies nil} do {self exec_rm(F)} end
+                     PKG.zombies := nil
+                     for F in LeftFiles do {self exec_rm(F)} end
+                  finally {self decr} end
                end
             end
-         finally {self decr} end
-         %% update database
-         %% move each lost file to its package lost list
-         for F in LostFiles do
-            Mog = {self file_to_package(F $)}
-            Pkg = {self database_mutable_entry(Mog $)}
-         in
-            Pkg.files := {Utils.diff  {CondSelect Pkg files nil} [F]}
-            Pkg.lost  := {Utils.union {CondSelect Pkg lost  nil} [F]}
-         end
-         %% take care of the previous installation
-         if {self get_extendpackage($)} then
-            %% if we are extending the package
-            %% add the files that were installed
-            PKG.files   := {Utils.union {CondSelect PKG files   nil} IFiles}
-            PKG.zombies := {Utils.diff  {CondSelect PKG zombies nil} IFiles}
-         else
-            %% else compute the left overs from the previous installation
-            %% i.e. every file in this package which is not being overwritten
-            LeftFiles = {Utils.diff {CondSelect PKG files nil} IFiles}
-         in
-            if {self get_keepzombies($)} then
-               %% move them to the zombie list
-               PKG.zombies := {Utils.union LeftFiles {CondSelect PKG zombies nil}}
-               PKG.lost    := {Utils.diff {CondSelect PKG lost nil} IFiles}
-               PKG.files   := IFiles
-            else
-               PKG.files := IFiles
-               %% forget that anything was ever lost
-               PKG.lost  := nil
-               %% remove all zombies and left overs
-               {self trace('removing zombies')}
-               {self incr}
-               try
-                  for F in {CondSelect PKG zombies nil} do {self exec_rm(F)} end
-                  PKG.zombies := nil
-                  for F in LeftFiles do {self exec_rm(F)} end
-               finally {self decr} end
+            %% now update all the other features of the package
+            PKG.uri := {self get_uri($)}
+            local L={self get_author($)} in
+               if L\=unit then PKG.author := L end
             end
+            local D={self get_released($)} in
+               if D\=unit then PKG.released := D end
+            end
+            PKG.installed := {Utils.dateCurrent}
+            local B={self get_blurb($)} in
+               if B\=unit then PKG.blurb := B end
+            end
+            local I={self get_info_text($)} in
+               if I\=unit then PKG.info_text := I end
+            end
+            local I={self get_info_html($)} in
+               if I\=unit then PKG.info_html := I end
+            end
+            %% finally update the database
+            {self database_save}
          end
-         %% now update all the other features of the package
-         PKG.uri := {self get_uri($)}
-         local L={self get_author($)} in
-            if L\=unit then PKG.author := L end
-         end
-         local D={self get_released($)} in
-            if D\=unit then PKG.released := D end
-         end
-         PKG.installed := {Utils.dateCurrent}
-         local B={self get_blurb($)} in
-            if B\=unit then PKG.blurb := B end
-         end
-         local I={self get_info_text($)} in
-            if I\=unit then PKG.info_text := I end
-         end
-         local I={self get_info_html($)} in
-            if I\=unit then PKG.info_html := I end
-         end
-         %% finally update the database
-         {self database_save}
       end
 
    end
